# mcpshare

./: .gitignore  README.md  mcpshare.py  pyproject.toml
.github/workflows/: codeql.yml
tests/: conftest.py  test_mcpshare.py
